--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,8 @@ h6 {
   width: 100%;
   z-index: 10;
   padding-block: .9375rem;
-  background: rgba(255,255,255,.95)
+  background: rgba(255,255,255,.95);
+  box-shadow: 0 0 .625rem rgba(223,223,223,.5)
 }
 .header__container {
   display: flex;
