--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ h6 {
   font-size: 1.125rem
 }
 .release__text {
-  max-width: 37.5rem
+  max-width: 43.75rem
 }
 .release__text>p:not(:last-child) {
   margin-bottom: .625rem
@@ -479,9 +479,9 @@ h6 {
   justify-content: center;
   align-items: center;
   gap: .1875rem;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
-  color: #0d163d
+  color: #2e3e80
 }
 .install__label img {
   aspect-ratio: 1/1;
@@ -530,6 +530,9 @@ h6 {
 .disclaimer__text {
   line-height: 1.5
 }
+.disclaimer__text>p {
+  margin-bottom: .9375rem
+}
 .disclaimer__text a {
   font-weight: 500;
   color: #f79534;
@@ -568,6 +571,7 @@ h6 {
   color: #0d163d
 }
 .markdown-body h1 {
+  text-transform: uppercase;
   padding-bottom: .5em;
   font-size: 2em;
   border-bottom: 1px solid #dbdbdb;
@@ -613,7 +617,7 @@ h6 {
   font-size: 85%;
   line-height: 1.45;
   color: #1f2328;
-  background-color: #f6f8fa;
+  background-color: #f1f1f1;
   border-radius: 6px;
   word-wrap: normal
 }
